Added unit tests for Data URL utility class

--- a/glTFLoaderUnitTests/glTFLoaderUnitTests.csproj
+++ b/glTFLoaderUnitTests/glTFLoaderUnitTests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataUrlTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleModelsTest.cs" />
   </ItemGroup>
